[FE]fix: 홈 페이지에서 Menu overflow 현상 해결

--- a/frontend/src/pages/HomePage/homePage.scss
+++ b/frontend/src/pages/HomePage/homePage.scss
@@ -55,9 +55,11 @@
   }
   .imgContainer {
     flex: 2;
-    background-color: #F0F0F0;
+    display: flex;
+    align-items: center;
     position: relative;
-
+    background-color: #F0F0F0;
+    
     @include md {
       display: none;
     }
